fix(key-insights.css): negative letter-spacing for buttons

--- a/site/blocks/KeyInsights.scss
+++ b/site/blocks/KeyInsights.scss
@@ -105,6 +105,7 @@ $slide-content-height: $grapher-height;
             border-color: $accent-pale-blue;
             font-weight: 700;
             color: $blue-90;
+            letter-spacing: -0.2px;
         }
     }
 
